crates/reap-pm-live/tests/ui/public_route_delivery_is_move_only.stderr
error[E0599]: no method named `clone` found for struct `PmPublicBookDelivery` in the current scope
 --> tests/ui/public_route_delivery_is_move_only.rs:4:27
  |
4 |     let _first = delivery.clone();
  |                           ^^^^^ method not found in `PmPublicBookDelivery`
