crates/reap-pm-live/tests/ui/public_route_delivery_is_move_only.rs
use reap_pm_live::PmPublicBookDelivery;

fn replay(delivery: PmPublicBookDelivery) {
    let _first = delivery.clone();
    let _second = delivery;
}

fn main() {}
